--- a/src/index.css
+++ b/src/index.css
@@ -1,38 +1,52 @@
+body{
+background-color: antiquewhite;
+}
+
 .container{
     margin: auto;
+    max-width: 600px;
     text-align: center;
     padding: 40px;
-    background-color: antiquewhite;
-
 }
 
 .search-container{
     display: flex;
     flex-direction: column;
 }
+
 label{
     font-size: 26px;
 }
 
 .search-container input {
     padding: 10px;
+    border-radius: 10px;
 }
 
-.card-container{
-    padding: 40px;
+.result-container{
+    background-color: gray;
+    color: white;
+    font-size: 22px;
+    padding: 4px;
+    margin-top: 4px;
+    border-radius: 10px;  
+    height: 300px; 
+    overflow-y: scroll;
+
 }
 
-.card-container p {
+.result-container li {
+    border-bottom: 1px solid white;
+}
+
+.card-container {
     font-size: 18px;
+    background-color: white;
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 30px;
 }
 
 ul{ 
     list-style: none;
 }
-
-.card-container img{
-    max-width: 150px;
-    height: 150px;
-    
-}
-
